# Real-time-RTSP-Video-Analytics-Pipeline

./: CMakeLists.txt  Dockerfile  README.md  detections.db  docker-compose.yml  requirements.txt  run_all.sh  web_log.txt  web_log_new.txt
hls_output/: stream.m3u8  stream0.ts
scripts/: convert_pt_to_onnx.py  download_model.sh  generate_test_video.py
src/: DatabaseHandler.cpp  DatabaseHandler.hpp  HLSRecorder.cpp  HLSRecorder.hpp  RTSPStreamer.cpp  RTSPStreamer.hpp  SafeQueue.hpp  YoloDetector.cpp  YoloDetector.hpp  main.cpp
web/: api.py
web/templates/: index.html
